@@ -5,6 +5,7 @@
 	* Fixed bug #32604: BE module broken with TYPO3 4.6
 	* Added feature #32610: Russian documentation (Thanks to Андрей Аксенов)
 	* Updated version to 1.5.1
+	* Follow-up to bug #32604: BE module broken with TYPO3 4.6
 
 2011-12-14  Stanislas Rolland  <typo3@sjbr.ca>
 
